--- a/index.html
+++ b/index.html
@@ -17,11 +17,17 @@
             <h2>JQuery Assessment</h2>
         </div>
     </div>
-    <div class="row">
-        <div class="col-md-2">
-            <button id="generate" class="btn btn-default">Generate</button>
+    <div class="buttons row">
+        <div class="generate col-md-2">
+            <button class="btn btn-primary">Generate</button>
         </div>
-        <div class="button-container">
+        <div class="delete col-md-2">
+
+        </div>
+        <div class="change col-md-2">
+
+        </div>
+        <div class="message">
 
         </div>
     </div>
